# GTA-Cuda-Remapping

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
examples/: apollo_to_train  bdd_to_citytrain  city_to_train  ids_to_trainids  lost_to_cityid  mapillary_to_citytrain  ursa_to_cityid  ursa_to_ids  ursa_to_trainids
include/: GpuMat.cuh  GpuVector.cuh  colours.h  helpers.cuh  helpers.h  ops.cuh
lib/: zupply.cpp  zupply.hpp
src/: main.cu  ops.cu
